Fix nav bar shadow overflow

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
     grid-template-rows: 1fr 1fr;
     position: relative;
     z-index: 1;
-    box-shadow: 2px 0px 4px rgb(157, 157, 157);
+    box-shadow: 4px 4px 4px rgb(157, 157, 157);
 }
 
 .nav .row1 {
